2004-02-07  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/VBA.cpp: fix power management code
	* src/win32/MainWnd.cpp (OnMySysCommand): fix power management code
	* src/win32/MainWndFile.cpp: fix power management code

2004-02-06  Forgotten  <forgotten@users.sourceforge.net>

	* src/Sound.cpp (soundSetQuality): avoid turning sound on if sound off is checked
	* src/gb/gbSound.cpp (gbSoundSetQuality): avoid turning sound on if sound off is checked
	* src/GBA.cpp (CPUSoftwareInterrupt): added SWI call to exit emulator

2004-02-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/MainWnd.cpp (FileRun): update battery file more often
	* src/win32/VBA.cpp (system10Frames): update battery file more often
	* src/gb/gbMemory.cpp: update battery file more often
	* src/gb/GB.cpp: update battery file more often
	* src/System.h: update battery file more often
	* src/Sram.cpp (sramWrite): update battery file more often
	* src/SDL.cpp (main): update battery file more often
	* src/GBA.cpp: update battery file more often
	* src/Flash.cpp (flashWrite): update battery file more often
	* src/EEprom.cpp (eepromWrite): update battery file more often

2004-01-30  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/OpenGL.cpp (render): fix memory leak in OpenGL rendering

2004-01-29  Forgotten  <forgotten@users.sourceforge.net>

	* src/gb/gbCodes.h: fix HALT when no matching in IE and IF

2004-01-28  Forgotten  <forgotten@users.sourceforge.net>

	* src/prof/prof.cpp: fix compile warnings
	* src/win32/MainWndTools.cpp: switch to use structure functions
	* src/win32/MainWndFile.cpp: switch to use structure functions
	* src/win32/VBA.cpp (VBA): use structure instead of individual functions for emulation
	* src/win32/VBA.h (class VBA): use structure instead of individual functions for emulation
	* src/win32/MainWnd.cpp: switch to use structure functions
	* src/System.h: structure for emulator functions